--- a/MaintenanceDashbord.Common/Properties/Resources.resx
+++ b/MaintenanceDashbord.Common/Properties/Resources.resx
@@ -120,6 +120,9 @@
   <data name="DateTimePattern" xml:space="preserve">
     <value>yyyy/MM/dd</value>
   </data>
+  <data name="DateTimeRegexPattern" xml:space="preserve">
+    <value>(19|20)[0-9]{2}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])</value>
+  </data>
   <data name="PaddleBarcodePattern" xml:space="preserve">
     <value>Pal[0-9]{1,3}$</value>
   </data>
